--- a/ShoesShop.Core/ShoesShop.Core.csproj
+++ b/ShoesShop.Core/ShoesShop.Core.csproj
@@ -8,8 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+	<PackageReference Include="System.Security.Cryptography.ProtectedData" Version="8.0.0" />
     <PackageReference Include="Npgsql" Version="8.0.5" />
     <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
+	<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
+
   </ItemGroup>
 </Project>
