--- a/ShoesShop.Core/ShoesShop.Core.csproj
+++ b/ShoesShop.Core/ShoesShop.Core.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
 	<PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
 	<PackageReference Include="System.Security.Cryptography.ProtectedData" Version="8.0.0" />
