--- a/ShoesShop.Core/ShoesShop.Core.csproj
+++ b/ShoesShop.Core/ShoesShop.Core.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
 	<PackageReference Include="CloudinaryDotNet" Version="1.26.2" />
 	<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+	<PackageReference Include="EPPlus" Version="7.5.2" />
 	<PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	<PackageReference Include="System.Security.Cryptography.ProtectedData" Version="8.0.0" />
